# vec_split

./: Cargo.toml  README.md
examples/: simple_splitting.rs
src/: accessors.rs  fast_accessor.rs  impls.rs  iter.rs  lib.rs  safe_accessor.rs
